force-app/main/default/objects/DevUser__c/DevUser__c.object-meta.xml
<CustomObject>
    <label>Dev User</label>
    <nameField>
        <label>Dev User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dev Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>