force-app/main/default/objects/DevUser__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>