force-app/main/default/objects/DevUser__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <label>Login</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>