force-app/main/default/objects/DevUser__c/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>NAME</columns>
    <columns>Login__c</columns>
    <columns>Type__c</columns>
    <columns>ExternalId__c</columns>
    <columns>Bio__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Records</label>
</ListView>